--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.darrionat</groupId>
     <artifactId>MatrixLib</artifactId>
-    <version>1.2</version>
+    <version>1.2.1</version>
+
+    <properties>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
+    </properties>
 </project>
