--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.darrionat</groupId>
     <artifactId>MatrixLib</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
